Mobile: Features CSS is  done

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,133 @@
 @import url(https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap&#39;);
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Source Sans Pro", sans-serif;
+}
+
+ol, dl, ul {
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+a {
+  text-decoration: none;
+}
+
+p {
+  line-height: 1.5;
+  color: gray;
+}
+
+img {
+  width: 40%;
+}
+
+main article h3 {
+  color: dimgray;
+  text-transform: uppercase;
+}
+
+body,
+main,
+footer,
+figcaption,
+form,
+main > section,
+main > section > article,
+main ul,
+header > section {
+  display: flex;
+  flex-direction: column;
+}
+
+main,
+main > section,
+main > section > section,
+main > section > article {
+  align-items: center;
+}
+
+main > section:nth-child(odd) {
+  background-color: ghostwhite;
+}
+
+header {
+  display: flex;
+  background-image: url(/img/landscape-3.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+header > section {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(80, 80, 80, .4);
+}
+
+/* MOBILE */
+@media (min-width: 200px) {
+  main > section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+  }
+  
+  main > section > section,
+  main > section > article {
+    width: 90%;
+  }
+
+  .features > article,
+  .about > article,
+  .team > article,
+  .portfolio > article,
+  .faq > article,
+  .contact > article {
+    text-align: center;
+  }
+  
+  /* FEATURES */
+    .features {
+      row-gap: 7vh;
+    }
+
+    .features > section {
+      display: flex;
+      flex-direction: column;
+      row-gap: 5vh;
+    }
+
+    .features aside{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      row-gap: 2vh;
+    }
+
+    .features aside > p {
+      text-align: center;
+    }
+
+    .features i {
+      background-color: darkorange;
+      color: white;
+      border: 3px solid darkorange;
+      border-radius: 50%;
+      height: 15vh;
+      width: 15vh;
+      display: flex;
+      justify-content: center; 
+      align-items: center;
+      font-size: 24px;
+    }
+
+    .features > article {
+      row-gap: 2vh;
+    }
+}
