Mobile: Portfolio is done

--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,38 @@ header > section {
       row-gap: 2vh;
     }
 
+    /* PORTFOLIO */
+    .portfolio {
+      row-gap: 10vh;
+      align-items: center;
+    }
+
+    .portfolio > article {
+      row-gap: 4vh;
+    }
+
+    .portfolio h3 {
+      color: dimgray;
+      font-size: 30px;
+      font-weight: 500;
+    }
+
+    .portfolio p {
+      color: dimgray;
+    }
+
+    .portfolio figure {
+      display: flex;
+      flex-wrap: wrap;
+      width: 95%;
+      row-gap: 1vh;
+    }
+
+    .portfolio img {
+      width: 100%;
+      height: 30vh;
+    }
+
     /* CONTACT */
     .contact {
       background-color: rgb(40, 40, 40);
