--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,58 @@ header > section {
   .contact > article {
     text-align: center;
   }
+
+  /* NAV */
+  nav > ul {
+    display: none;
+  }
+
+  nav {
+    display: flex;
+    align-self: center;
+    align-items: center;
+    width: 100%;
+    height: 10vh;
+    position: relative;
+  }
+
+  nav > h2 {
+    color: dimgray;
+    font-size: 36px;
+    padding-left: 5vw;
+  }
+
+  summary {
+    font-size: 26px;
+    padding-right: 10vw;
+    color: darkorange;
+  }
+  
+  details {
+    width: 100%;
+    position: absolute;
+    text-align: right;
+  }
+
+  details > ul {
+    position: absolute;
+    width: 100%;
+    padding-top: 3vh;
+  }
+  
+  details li {
+    background-color: white;
+    display: flex;
+  }
+  
+  details a {
+    border-bottom: 4px solid darkorange;
+    width: 100%;
+    padding: 5%;
+    text-align: left;
+    color: darkorange;
+    font-size: 20px;
+  }
   
   /* FEATURES */
     .features {
